--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,85 @@
-/* You can add global styles to this file, and also import other style files */
+@import "themes";
+@import "~normalize-scss/sass/normalize/import-now";
+
+*{
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+ margin: 0;
+  padding: 0;
+}
+
+html{
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  background-color: map-get($primary, 500) !important;
+  color:map-get($accent, 500) !important;
+  margin: 0; height: 100%; overflow: hidden
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+
+}
+
+header {
+ flex:1;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+}
+//make the main content scrollable and do not push the footer.
+main {
+  flex:1;
+height: calc(100% - (280px));
+  width:100%;
+
+
+ }
+/* scrollbar width */
+main::-webkit-scrollbar {
+  width: 15px;
+
+}
+
+/* scrollbar Track */
+main::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+  background-color: rgba(255,255,255,0.1);
+
+}
+
+/* scrollbar Handle */
+main::-webkit-scrollbar-thumb {
+  background-color: map-get($active, 500) !important; ;
+  border-radius: 10px;
+
+}
+
+//stick footer to the bottom on the page
+footer {
+  flex:1;
+
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+z-index: 10;
+}
+
+
+
+div.flex-container
+{
+  display: flex;
+}
+
+div.flex-item
+{
+  flex: 1 1 5em;
+}
