--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,9 @@
 @import "../../../themes.scss";
 
+*{
+  color: map-get($accent, 500) !important;
+}
+
 .example-card {
   max-width: 400px;
 }
@@ -8,13 +12,45 @@
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
-h1{
-  //color:#101010;
-  color: map-get($accent, 500) !important;
-}
-p{
 
-    //color:#101010;
-    color: map-get($accent, 700) !important;
+
+.row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  box-orient: horizontal;
+  flex-direction: row;
+
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  align-items: center;
+  flex: 0.8 ;
 
 }
+
+.cell {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+img {
+height:auto;
+  max-width:100%;
+  display: block;
+}
+
+
