--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,85 +1,71 @@
 @import "themes";
 @import "~normalize-scss/sass/normalize/import-now";
 
-*{
+
+* {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
- margin: 0;
+  margin: 0;
   padding: 0;
+
 }
 
-html{
+html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  background-color: map-get($primary, 500) !important;
-  color:map-get($accent, 500) !important;
-  margin: 0; height: 100%; overflow: hidden
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-
   margin: 0;
   height: 100%;
-  overflow: hidden;
-
 }
 
-header {
- flex:1;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-}
-//make the main content scrollable and do not push the footer.
-main {
-  flex:1;
-height: calc(100% - (280px));
-  width:100%;
-
-
- }
-/* scrollbar width */
-main::-webkit-scrollbar {
-  width: 15px;
-
-}
-
-/* scrollbar Track */
-main::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-  background-color: rgba(255,255,255,0.1);
-
-}
-
-/* scrollbar Handle */
-main::-webkit-scrollbar-thumb {
-  background-color: map-get($active, 500) !important; ;
-  border-radius: 10px;
-
-}
-
-//stick footer to the bottom on the page
-footer {
-  flex:1;
-
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-z-index: 10;
-}
-
-
-
-div.flex-container
-{
+div.container-column-nowrap {
   display: flex;
+  min-height: 100vh;
+  flex-flow: column nowrap;
 }
 
-div.flex-item
-{
-  flex: 1 1 5em;
+div.flex-container-row-nowrap {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+div.flex-container-row-nowrap {
+  display: flex;
+ flex-wrap: inherit;
+}
+
+footer, header  {
+  & mat-toolbar { background-color: rgba(255,255,255, 0.1) !important; }
+}
+
+main {
+  flex: 1;
+}
+
+div.flex-item-span3 {
+  flex: 3 3;
+}
+
+div.flex-item-auto {
+  flex: 1 1 auto;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+div.flex-item-inherit {
+  flex: 1 1 inherit;
+  justify-content: center;
+  align-content: center;
+}
+
+mat-sidenav {
+  width: 250px;
+}
+
+
+@media only screen and (max-width: 600px) {
+  body {
+    overflow-y: scroll !important;
+  }
 }
