changes to home page, removed  code samples page. The website will be my code sample for now.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,18 @@
-
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
     <app-navigation-list (sidenavClose)="sidenav.close()"></app-navigation-list>
   </mat-sidenav>
-<mat-sidenav-content>
-  <div class="container-column-nowrap">
-    <header>
-      <app-navbar (sidenavToggle)="sidenav.toggle()"></app-navbar>
-    </header>
-
-    <main>
-      <router-outlet></router-outlet>
-    </main>
-
-    <footer>
-      <app-footer></app-footer>
-    </footer>
-
-  </div>
-
-</mat-sidenav-content>
+  <mat-sidenav-content>
+    <div class="bodyContainer">
+      <header>
+        <app-navbar (sidenavToggle)="sidenav.toggle()"></app-navbar>
+      </header>
+      <main>
+        <router-outlet></router-outlet>
+      </main>
+      <footer>
+        <app-footer></app-footer>
+      </footer>
+    </div>
+  </mat-sidenav-content>
 </mat-sidenav-container>
