--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,14 +2,17 @@
 @import "~normalize-scss/sass/normalize/import-now";
 
 
+$debug: false;
+$max: 100vw;
+$min: 400px;
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
 }
+
 
 html {
   -webkit-text-size-adjust: 100%;
@@ -18,11 +21,12 @@ html {
   height: 100%;
 }
 
-div.container-column-nowrap {
+div.bodyContainer {
   display: flex;
   min-height: 100vh;
   flex-flow: column nowrap;
 }
+
 
 div.flex-container-row-nowrap {
   display: flex;
@@ -31,20 +35,34 @@ div.flex-container-row-nowrap {
 
 div.flex-container-row-nowrap {
   display: flex;
- flex-wrap: inherit;
+  flex-wrap: inherit;
 }
 
-footer, header  {
-  & mat-toolbar { background-color: rgba(255,255,255, 0.1) !important; }
+
+footer, header {
+  width: 100%;
+
+  & mat-toolbar {
+    background-color: rgba(255, 255, 255, 0.05) !important;
+  }
 }
+
 
 main {
   flex: 1;
+  width: 100%;
+  max-width: 90vw;
+  margin: 0 auto;
+
+  //fade in
+
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+  -ms-animation: fadein 2s; /* Internet Explorer */
+  -o-animation: fadein 2s; /* Opera < 12.1 */
+  animation: fadein 2s;
 }
 
-div.flex-item-span3 {
-  flex: 3 3;
-}
 
 div.flex-item-auto {
   flex: 1 1 auto;
@@ -64,8 +82,78 @@ mat-sidenav {
 }
 
 
-@media only screen and (max-width: 600px) {
-  body {
-    overflow-y: scroll !important;
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+
+//color
+p {
+  color: map-get($primary, 200);
+}
+
+.active-list-item, :host .active-list-item, a:active {
+  color: map-get($accent, 500) !important;
+
+}
+
+.active-list-item:hover, :host .active-list-item:hover {
+  color: map-get($accent, 300) !important;
+}
+
+a, :host a {
+  color: map-get($primary, 200) !important;
+
+  //color: map-get($primary, 500) !important;
+}
+
+a:hover, :host a:hover {
+  color: map-get($primary, 50) !important;
+
+}
+
